# OS-labs-template

./: .clang-tidy  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.c
lab1/src/: child.c  parent.c  utils.c
lab2/: CMakeLists.txt
lab2/include/: parent.h  utils.h
lab2/src/: utils.c
lab3/: CMakeLists.txt  main.cpp
lab3/include/: lab3.h  utils.h
lab3/src/: lab3.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp
